--- a/examples/homer/styles.css
+++ b/examples/homer/styles.css
@@ -11,6 +11,7 @@
     font-size: 28px;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 1.0);
     border-radius: 0px 0px 0px 10px;
+    pointer-events: none;
 }
 
 .car {
@@ -27,6 +28,7 @@
     font-weight: bold;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 1.0);
     padding: 26px 20px 20px 20px;
+    pointer-events: none;
 }
 
 .pins, .saucer {
