--- a/examples/nyan-cat/styles.css
+++ b/examples/nyan-cat/styles.css
@@ -8,6 +8,7 @@ body, div {
     text-shadow: 0px -1px 1px rgba(255, 255, 255, 1.0);
     text-align: center;
     font-size: 36px;
+    pointer-events: none;
 }
 
 .instruction {
@@ -16,6 +17,7 @@ body, div {
     text-shadow: 0px -1px 1px rgba(255, 255, 255, 1.0);
     font-size: 24px;
     margin-left: 20px;
+    pointer-events: none;
 }
 
 .cat {
