--- a/examples/demo/styles.css
+++ b/examples/demo/styles.css
@@ -1,5 +1,20 @@
-body, div {
+body, div, a {
     font-family: Helvetica
+}
+
+.provider {
+    z-index: 10000;
+    text-align: center;
+    font-size: 20pt;
+    padding: 10px;
+    position: absolute;
+    width: 120px;
+    height: auto;
+    right: 20px;
+    bottom: 20px;
+    background: green;
+    color: white;
+    border-radius: 5px;
 }
 
 .title {
