Add support for OpenLayers 3
This implements all functions in MapView.js for OpenLayers 3. The demo
example is now also provided with OpenLayers 3 as map viewer.

--- a/examples/demo/styles.css
+++ b/examples/demo/styles.css
@@ -17,6 +17,10 @@ body, div, a {
     border-radius: 5px;
 }
 
+.provider a {
+    color: white;
+}
+
 .title {
     color: black;
     font-weight: bold;
